[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/game/game.gd" type="Script" id=1]
[ext_resource path="res://resources/game_field.png" type="Texture" id=2]
[ext_resource path="res://src/entities/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/Acme 9 Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/entities/ball/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/game/ui.gd" type="Script" id=6]
[ext_resource path="res://resources/wood_hit2.wav" type="AudioStream" id=7]
[ext_resource path="res://resources/score.wav" type="AudioStream" id=8]
[ext_resource path="res://resources/border_hit.wav" type="AudioStream" id=9]
[ext_resource path="res://resources/referee_whistle.wav" type="AudioStream" id=10]
[ext_resource path="res://resources/game_won_clapping.wav" type="AudioStream" id=11]
[ext_resource path="res://src/game/sound_manager.gd" type="Script" id=12]
[ext_resource path="res://src/data/player_data.tres" type="Resource" id=13]
[ext_resource path="res://src/data/crt_material.tres" type="Material" id=14]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 800.02, -1.4946 )
b = Vector2( 0.0597827, -1.376 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 5.27807, 0.0275146 )
b = Vector2( 4.89379, 600.215 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 801.214, 590.181 )
b = Vector2( 800.682, -10.0162 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0.0328365, 601.456 )
b = Vector2( 800.074, 601.467 )

[sub_resource type="DynamicFont" id=5]
size = 35
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0, 0.47451, 0.945098, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 23
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 35
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 2
outline_color = Color( 0.901961, 0.160784, 0.215686, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 40
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 21
use_filter = true
font_data = ExtResource( 4 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
player_data = ExtResource( 13 )

[node name="BallTimer" type="Timer" parent="."]
wait_time = 1.53
one_shot = true

[node name="SoundManager" type="Node" parent="."]
script = ExtResource( 12 )

[node name="StartGame" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 10 )

[node name="Score" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 8 )

[node name="EndGame" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 11 )

[node name="PaddleCollision" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 7 )

[node name="WallCollision" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 9 )

[node name="Field" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="Field"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.31281
margin_top = -1.41422
margin_right = 795.687
margin_bottom = 598.586
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopWall" type="StaticBody2D" parent="Field" groups=[
"wall",
]]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/TopWall"]
shape = SubResource( 1 )

[node name="LeftGoal" type="Area2D" parent="Field"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/LeftGoal"]
position = Vector2( 3.51656, -0.234504 )
shape = SubResource( 2 )

[node name="PlayerRight" parent="Field" instance=ExtResource( 3 )]
modulate = Color( 0.901961, 0.160784, 0.215686, 1 )
position = Vector2( 769.89, 297.725 )
z_index = 1
id = 1

[node name="Ball" parent="Field" instance=ExtResource( 5 )]
position = Vector2( 400.201, 301.028 )
z_index = 1
speed = 608

[node name="PlayerLeft" parent="Field" instance=ExtResource( 3 )]
modulate = Color( 0, 0.47451, 0.945098, 1 )
position = Vector2( 30.339, 301.014 )
z_index = 1

[node name="RightGoal" type="Area2D" parent="Field"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/RightGoal"]
position = Vector2( -9.39136, 9.96639 )
shape = SubResource( 3 )

[node name="BottomWall" type="StaticBody2D" parent="Field" groups=[
"wall",
]]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BottomWall"]
shape = SubResource( 4 )

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
player_data = ExtResource( 13 )
game_begin_text = "Press SPACE to launch the ball"
reset_text = "Press SPACE to reset game or ESCAPE to exit"

[node name="HTopContainer" type="HBoxContainer" parent="UI"]
margin_right = 800.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPlayerMargin" type="MarginContainer" parent="UI/HTopContainer"]
margin_right = 300.0
margin_bottom = 176.0
size_flags_horizontal = 3
custom_constants/margin_top = 25

[node name="PlayerBoard" type="VBoxContainer" parent="UI/HTopContainer/LeftPlayerMargin"]
margin_top = 25.0
margin_right = 300.0
margin_bottom = 176.0
custom_constants/separation = -21
alignment = 1

[node name="PlayerName" type="Label" parent="UI/HTopContainer/LeftPlayerMargin/PlayerBoard"]
margin_right = 300.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0.47451, 0.945098, 1 )
text = "Player 1"
align = 1

[node name="PlayerScore" type="Label" parent="UI/HTopContainer/LeftPlayerMargin/PlayerBoard"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.47451, 0.945098, 1 )
text = "0"
align = 1

[node name="GameRoundsMargin" type="MarginContainer" parent="UI/HTopContainer"]
margin_left = 304.0
margin_right = 495.0
margin_bottom = 176.0
custom_constants/margin_top = -100

[node name="MaxRounds" type="Label" parent="UI/HTopContainer/GameRoundsMargin"]
margin_top = 14.0
margin_right = 191.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
text = "Best of %s"
align = 1

[node name="RightPlayerMargin" type="MarginContainer" parent="UI/HTopContainer"]
margin_left = 499.0
margin_right = 800.0
margin_bottom = 176.0
size_flags_horizontal = 3
custom_constants/margin_top = 25

[node name="PlayerBoard" type="VBoxContainer" parent="UI/HTopContainer/RightPlayerMargin"]
margin_top = 25.0
margin_right = 301.0
margin_bottom = 176.0
custom_constants/separation = -21
alignment = 1

[node name="PlayerName" type="Label" parent="UI/HTopContainer/RightPlayerMargin/PlayerBoard"]
margin_right = 301.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.901961, 0.160784, 0.215686, 1 )
text = "Player 2"
align = 1

[node name="PlayerScore" type="Label" parent="UI/HTopContainer/RightPlayerMargin/PlayerBoard"]
margin_top = 50.0
margin_right = 301.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.901961, 0.160784, 0.215686, 1 )
text = "0"
align = 1

[node name="CenterMargin" type="MarginContainer" parent="UI"]
margin_top = 180.0
margin_right = 800.0
margin_bottom = 260.0
custom_constants/margin_top = 0

[node name="WonText" type="Label" parent="UI/CenterMargin"]
margin_right = 800.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 10 )
text = "Player \"%s\" won!!!"
align = 1

[node name="BottomMargin" type="MarginContainer" parent="UI"]
margin_top = 264.0
margin_right = 800.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/margin_top = 143

[node name="BottomText" type="Label" parent="UI/BottomMargin"]
margin_top = 218.0
margin_right = 800.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 0.54902 )
text = "PLACEHOLDER PLACEHOLDER"
align = 1

[node name="ShaderLayer" type="CanvasLayer" parent="."]

[node name="CRTShader" type="ColorRect" parent="ShaderLayer"]
visible = false
material = ExtResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="ball_reseted" from="." to="Field/Ball" method="_on_Game_ball_reseted"]
[connection signal="ball_rolling" from="." to="UI" method="_on_Game_ball_rolling"]
[connection signal="ball_rolling" from="." to="Field/Ball" method="_on_Game_ball_rolling"]
[connection signal="ball_rolling" from="." to="SoundManager" method="_on_Game_ball_rolling"]
[connection signal="reseted" from="." to="UI" method="_on_Game_reseted"]
[connection signal="reseted" from="." to="Field/PlayerRight" method="_on_Game_reseted"]
[connection signal="reseted" from="." to="Field/Ball" method="_on_Game_reseted"]
[connection signal="reseted" from="." to="Field/PlayerLeft" method="_on_Game_reseted"]
[connection signal="reseted" from="." to="SoundManager" method="_on_Game_reseted"]
[connection signal="score_changed" from="." to="UI" method="_on_Game_score_changed"]
[connection signal="scored" from="." to="SoundManager" method="_on_Game_scored"]
[connection signal="won" from="." to="UI" method="_on_Game_won"]
[connection signal="won" from="." to="Field/PlayerRight" method="_on_Game_won"]
[connection signal="won" from="." to="Field/Ball" method="_on_Game_won"]
[connection signal="won" from="." to="Field/PlayerLeft" method="_on_Game_won"]
[connection signal="won" from="." to="SoundManager" method="_on_Game_won"]
[connection signal="timeout" from="BallTimer" to="." method="_on_BallTimer_timeout"]
[connection signal="body_entered" from="Field/LeftGoal" to="." method="_on_LeftGoal_body_entered"]
[connection signal="paddle_collision" from="Field/Ball" to="SoundManager" method="_on_Ball_paddle_collision"]
[connection signal="wall_collision" from="Field/Ball" to="SoundManager" method="_on_Ball_wall_collision"]
[connection signal="body_entered" from="Field/RightGoal" to="." method="_on_RightGoal_body_entered"]
